--- a/components/z6xgf2my0-java-quarkus/overlays/development/deployment-patch.yaml
+++ b/components/z6xgf2my0-java-quarkus/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: z6xgf2my0-java-quarkus
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-bae1c23cf5.z3bl.p3.openshiftapps.com/rhtap/rhtap-qe-java-quarkus:88babc93a84903d05306841b4437174b5b767b2a@sha256:d2e90ad2951c797f72741a561e2e84b03fac4161bdf0bbeb52a4ca978b640f91
+          name: container-image
